<resources>
    <string name="app_name">Alloy Project</string>
    <string name="title_activity_tabbed_login_register">tabbed_login_register</string>
    <string name="sfy">An undergraduate student in University of Michigan - Shanghai Jiao Tong University Joint Institute, majored in Computer Science.</string>
    <string name="sfyEmail">francis_sfy@sjtu.edu.cn</string>
    <string name="twh">An undergraduate student in School of Naval Architecture, Ocean and Civil Engineering, majored in Engineering Mechanics.</string>
    <string name="twhEmail">twhhome@sjtu.edu.cn</string>
    <string name="zjn">An undergraduate student in School of Electronic Information and Electrical Engineering, majored in Electrical Engineering.</string>
    <string name="zjnEmail">331553021@qq.com</string>
    <string name="appIntro1">This is one of the innovation projects of college students.
        We build this application to help people, especially those researchers and students,
        to get attributes of alloys easily. Moreover, users can add attributes of alloys if
        they find something the app doesn\'t include. Users can also star alloys if they want
        to tag them. The sort function is also included in this app.  </string>
    <string name="appIntro2">Our team consists of four students, who are Xiao Changsheng, Shen Feiyu,
        Tang Wenhao, and Zhu Jianan. Xiao Changsheng is the leader of our team, and his job is to
        collect attributes of alloys. The other three students are the developers of this app.
        For their information, you can see in \"Develops\".</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Lonely boy</string>
    <string name="slide_2_title">Meet</string>
    <string name="slide_3_title">Fall in love at first sight</string>
    <string name="slide_4_title">Both fall in love</string>
    <string name="slide_5_title">He is waiting for you</string>

    <string name="play_again">play again</string>
    <string name="update">There is a update version.</string>
    <string name="updateTitle">Update</string>
    <string name="updateContent">Needs to update.</string>
</resources>
